<resources>
    <string name="app_name">GoRealm</string>
    <string name="sampleJson">[   { \t\"id\": 1, \t\"empCount\": 5, \t\"name\": \"ABC Software Pvt. Ltd\", \t\"address\": \"Pune\", \t\"claps\": 19599, \t\"employees\": [ \t  { \t\t\"id\": 1, \t\t\"name\": \"Onkar\", \t\t\"age\": 27, \t\t\"address\": \"Pune\", \t\t\"department\": \"Development\" \t  }, \t  { \t\t\"id\": 2, \t\t\"name\": \"Manoj\", \t\t\"age\": 26, \t\t\"address\": \"Pune\", \t\t\"department\": \"Development\" \t  }, \t  { \t\t\"id\": 3, \t\t\"name\": \"Vikrant\", \t\t\"age\": 32, \t\t\"address\": \"Pune\", \t\t\"department\": \"QA\" \t  }, \t  { \t\t\"id\": 4, \t\t\"name\": \"Mahesh\", \t\t\"age\": 30, \t\t\"address\": \"Pune\", \t\t\"department\": \"Development\" \t  }, \t  { \t\t\"id\": 5, \t\t\"name\": \"Hemant\", \t\t\"age\": 28, \t\t\"address\": \"Pune\", \t\t\"department\": \"Support\" \t  } \t]   },   { \t\"id\": 2, \t\"empCount\": 3, \t\"name\": \"XYZ Software Pvt. Ltd\", \t\"address\": \"Kolkata\", \t\"claps\": 24565, \t\"employees\": [ \t  { \t\t\"id\": 1, \t\t\"name\": \"Jaspreet\", \t\t\"age\": 31, \t\t\"address\": \"Kolkata\", \t\t\"department\": \"HR\" \t  }, \t  { \t\t\"id\": 2, \t\t\"name\": \"Jai\", \t\t\"age\": 29, \t\t\"address\": \"Kolkata\", \t\t\"department\": \"Design\" \t  }, \t  { \t\t\"id\": 3, \t\t\"name\": \"Avijit\", \t\t\"age\": 27, \t\t\"address\": \"Kolkata\", \t\t\"department\": \"Development\" \t  } \t]   },   { \t\"id\": 3, \t\"empCount\": 4, \t\"name\": \"SMT Software\", \t\"address\": \"Manila\", \t\"claps\": 12407, \t\"employees\": [ \t  { \t\t\"id\": 1, \t\t\"name\": \"Carlo\", \t\t\"age\": 30, \t\t\"address\": \"Manila\", \t\t\"department\": \"Design\" \t  }, \t  { \t\t\"id\": 2, \t\t\"name\": \"Nev\", \t\t\"age\": 28, \t\t\"address\": \"Manila\", \t\t\"department\": \"UX\" \t  }, \t  { \t\t\"id\": 3, \t\t\"name\": \"Mary\", \t\t\"age\": 26, \t\t\"address\": \"Manila\", \t\t\"department\": \"Development\" \t  }, \t  { \t\t\"id\": 4, \t\t\"name\": \"Edward\", \t\t\"age\": 24, \t\t\"address\": \"Manila\", \t\t\"department\": \"Development\" \t  } \t]   },   { \t\"id\": 4, \t\"empCount\": 6, \t\"name\": \"VBT Agency\", \t\"address\": \"London\", \t\"claps\": 17047, \t\"employees\": [ \t  { \t\t\"id\": 1, \t\t\"name\": \"Jack\", \t\t\"age\": 30, \t\t\"address\": \"London\", \t\t\"department\": \"Design\" \t  }, \t  { \t\t\"id\": 2, \t\t\"name\": \"Roy\", \t\t\"age\": 28, \t\t\"address\": \"London\", \t\t\"department\": \"UX\" \t  }, \t  { \t\t\"id\": 3, \t\t\"name\": \"James\", \t\t\"age\": 26, \t\t\"address\": \"London\", \t\t\"department\": \"Development\" \t  }, \t  { \t\t\"id\": 4, \t\t\"name\": \"SM\", \t\t\"age\": 32, \t\t\"address\": \"London\", \t\t\"department\": \"Development\" \t  }, \t  { \t\t\"id\": 5, \t\t\"name\": \"Batman\", \t\t\"age\": 35, \t\t\"address\": \"London\", \t\t\"department\": \"Development\" \t  }, \t  { \t\t\"id\": 6, \t\t\"name\": \"Superman\", \t\t\"age\": 29, \t\t\"address\": \"London\", \t\t\"department\": \"QA\" \t  } \t]   },   { \t\"id\": 5, \t\"empCount\": 2, \t\"name\": \"Shield Agency\", \t\"address\": \"New York City\", \t\"claps\": 35747, \t\"employees\": [ \t  { \t\t\"id\": 1, \t\t\"name\": \"Iron Man\", \t\t\"age\": 30, \t\t\"address\": \"New York City\", \t\t\"department\": \"Development\" \t  }, \t  { \t\t\"id\": 2, \t\t\"name\": \"Hulk\", \t\t\"age\": 28, \t\t\"address\": \"New York City\", \t\t\"department\": \"Super Admin\" \t  } \t]   } ]</string>
    <string name="total_emp">Total Employees: %1$d</string>
    <string name="company_id">Company id</string>
    <string name="claps">Claps</string>
    <string name="company_name">Company Name</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="ascending_order">Ascending Order</string>
    <string name="heart_animation">heart animation</string>
    <string name="add_company">Add Company</string>
    <string name="company_address">Company address</string>
    <string name="valid_id">Company Id is Required</string>
    <string name="valid_name">Company name is Required</string>
    <string name="valid_address">Company address is Required</string>
    <string name="valid_claps">Company claps are Required</string>
    <string name="total_emp_count">Total Employees</string>
    <string name="valid_count">Employee Count is Required</string>
    <string name="emp_age">Age: %1$d</string>
    <string name="emp_dept">Department: %1$s</string>
    <string name="no_record">No Record Found</string>
    <string name="add_emp">Employees</string>

</resources>
